# listaller

./: .directory  .gitignore  .gitignore~  AUTHORS  CMakeLists.txt  ChangeLog  DEPENDENCIES  MAINTAINERS  Makefile  Makefile.in  NEWS  README  RELEASE  RegExpr.pas  TODO  abarctyp.pas  abbrowse.pas  abcabmak.pas  abcabtyp.pas  abconst.pas  abdefine.inc  abdfbase.pas  abdfhufd.pas  abdfinw.pas  abdfoutw.pas  abdfpkmg.pas  abdfstrm.pas  abgztyp.pas  abmeter.inc  aboutbox.lfm  aboutbox.lrs  aboutbox.pas  abpefn.inc  abqpefn.pas  abselfex.pas  abspanst.pas  abtartyp.pas  abutils.pas  abview.inc  abzbrows.pas  (+131 more)
contrib/apbuild/: CMakeLists.txt  apgcc  lig++
data/components/: CMakeLists.txt  GLib2.component  README
data/dbus/: CMakeLists.txt  org.freedesktop.Listaller.conf  org.freedesktop.Listaller.service  org.freedesktop.listaller.policy  org.nlinux.Listaller.conf  org.nlinux.Listaller.service.in  org.nlinux.listaller.policy
data/etc/: CMakeLists.txt  Listaller.conf  default-dependencies.list  dependencies.list  depscan-ignore.list  gpg.conf
data/graphics/: CMakeLists.txt
data/metainfo-templates/: CMakeLists.txt  Libc6.framework  Linux.framework  OggVorbis.component  README  glib2.metainfo.xml  gtk+3.metainfo.xml  libc6.metainfo.xml  mesa.metainfo.xml  stdlibs.metainfo.xml
docs/: .gitignore  CMakeLists.txt  DEPENDENCIES  Dependencies  README  create_html.sh  createhtml  extract_docs.sh  index.site  ipk-ips-global-variables.txt  ipk-specification-v1.1.txt  ipk-specification-v1.txt  ips-control-specification-v1.txt  libuild.1  limallarddocs.xsl  lipa.1  plug  prepare-docbuild.sh  publican.cfg  relocatable-apps.page  source-doc.tex  source-docs.tex  tmp-plug  validate
docs/api/: .gitignore  clean.sh  listaller-docs.xml
docs/html/: AbArcTyp.TAbArchive.html  AbArcTyp.TAbArchiveItem.html  AbArcTyp.TAbArchiveList.html  AbArcTyp.TAbArchiveStreamHelper.html  AbArcTyp.html  AbUnzper.TAbCustomUnZipper.html  AbUnzper.TAbUnZipper.html  AbUnzper.html  AbZipper.TAbCustomZipper.html  AbZipper.TAbZipper.html  AbZipper.html  AllClasses.html  AllConstants.html  AllFunctions.html  AllIdentifiers.html  AllTypes.html  AllUnits.html  AllVariables.html  ClassHierarchy.html  LiPkgCreator.html  MTProcs.TMultiThreadProcItem.html  MTProcs.TProcThread.html  MTProcs.TProcThreadGroup.html  MTProcs.TProcThreadPool.html  MTProcs.html  RegExpr.ERegExpr.html  RegExpr.TRegExpr.html  RegExpr.html  aboutbox.TFmAbout.html  aboutbox.html  appitem.TAppInfoItem.html  appitem.TAppItemList.html  appitem.html  applist.TAppListView.html  applist.html  appman.html  appupdate.html  blcksock.ESynapseError.html  blcksock.TBlockSocket.html  blcksock.TCustomSSL.html  (+127 more)
docs/man/: CMakeLists.txt  apgcc.1.xml  appcompile.1.xml  depscan.1.xml  libuild.1  libuild.1.xml  lig++.1.xml  ligcc.1.xml  likey.1.xml  lipa.1.xml  lipkgen.1.xml  relaytool.1.xml  runapp.1.xml
docs/pages/: appcompile.page  architecture-naming.page  depscan.page  directory-substvars.page  guide_app-development.page  guide_enduser.page  guide_packaging.page  guide_specifications.page  index.page  index.site  ligcc.page  local.site  package-install-howto.page  package-remove-howto.page  packaging-instructions.page  relaytool.page  relocatable-apps.page
docs/sources/: APIDoc.xml  Author_Group.xml  Book_Info.xml  Legal_Notice.xml  Listaller.ent  Listaller.xml  Manpages.xml  Preface.xml  Project_Desc.xml  Revision_History.xml
frontends/: CMakeLists.txt  aboutbox.pas  dgfrm.lfm  igobase.lfm  igobase.pas  linotify.lfm  listallgo.lpi  listallgo.lpr  listallgo.res  listallmgr.lpi  listallmgr.lpr  listallmgr.res  litray.lpi  liupdate.lpi  liupdate.res  manager.lfm  manager.pas  pkgconvertdisp.pas  siginfodisp.pas  uninstall.lfm  updatefrm.pas  updexecfrm.lfm  updexecfrm.pas  xtypefm.lfm  xtypefm.pas
graphics/: .directory  CMakeLists.txt  header.xcf  ligraphic-header.xcf  listaller_creator.xcf  liupdate.xcf  mime-ips.xcf  wizardimage.xcf
graphics/incoming/: .directory
graphics/libutton/: .directory
graphics/obsolete/: SetupImage.xcf  header.xcf  xupdater.xcf
lib/: CMakeLists.txt  dbusproc.pas  dderesolve.pas  depmanage.pas  ipkhandle.pas  ipkinstall.pas  liappmanage.pas  libinstaller.lpi  libinstaller.lpr  libinstaller.lps  libinstaller.rc  lidbusproc.pas  limanageapp.pas  liupdateapp.pas  makebind  makecbind  makepkbind  management.pas  mtprocs.pas  slibmanage.pas  softwaredb.pas
lib/cbind/: cheader.template  li-installer.h  li-manager.h  li-types.h  li-updater.h  libinstaller.la.in  libinstaller.pc.in  listaller.h
lib/installer/: libinstaller.lpi  libinstaller.lpr  libinstaller.rc
lib/installer-qt/: CMakeLists.txt  lisetup.cpp  lisetup.h
lib/ipk/: CMakeLists.txt  libipk.lpi  libipk.lpr  liblistaller.lpi  (+2 more)
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  ast.po  ca.po  cs.po  da.po  de.po  es.po  fi.po  fr.po  he.po  id.po  it.po  listaller.pot  lt.po  nds.po  nl.po  oc.po  pl.po  pt_BR.po  ru.po  sk.po  sq.po  sv.po  tr.po  zh_CN.po
src/: CMakeLists.txt  Makefile.in  aboutbox.lfm  aboutbox.pas  appinstalldb.pas  appitem.pas  appitem.vala  appitems.vala  application.vala  applist.pas  appstream-data.vala  appstream.vala  callbackprocess.pas  cdefines.inc  clean.sh  component-factory.vala  components.vala  config-global.vala  config.vala  constants.vala.in  copylib.sh  database-int.vala  database-internal.vala  database.vala  dderesolve.pas  dep-info.vala  dep-installer.vala  dep-manager.vala  dependency.vala  depinfo.vala  depinstaller.vala  depman.vala  depmanage.pas  depmanager.vala  depprovider-pk.vala  depsolver.vala  dgfrm.lfm  dgfrm.pas  dgunit.lfm  dgunit.pas  (+157 more)
tests/: CMakeLists.txt  Info  leaktest  listaller.supp  testcommon.vala  tests-basics.vala  tests-database.vala  tests-depmanager.vala  tests-depsolver.vala  tests-installer.vala  tests-ipk.vala  tests-ipkbuild.vala  tests-keydb.vala  tests-libuild.vala  tests-repository.vala  tests-security.vala  tests-signatures.vala  tests-signing.vala  tests-updater.vala  unit-tests.vala
tools/: CMakeLists.txt  console-progress-bar.vala  reporting.vala  signipk  toolshared.vala
(+846 files in other folders)
